Commenting the outline of digital resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -6,7 +6,55 @@
     </head>
 
     <body>
-        
+        <header>
+            <!--Contact information goes here!-->
+        </header>
+        <section>
+            <!--Education section goes here-->
+            <!--Illinois Tech-->
+        </section>
+        <section>
+            <!--Experience section goes here-->
+            <!--Technology Summer Analyst @ Accenture-->
+            <!--Software Engineer @ HaxML-->
+            <!--Software Quality Assurance Engineering Intern @ Script Health-->
+            <!--Computer Science Instructor @ Juni Learning-->
+            <!--Interdisciplinary Data Science Consultant @ Accenture/IIT-->
+        </section>
+        <section>
+            <!--Relevant courses section goes here-->
+            <!--Object-Oriented Programming-->
+            <!--Data Structures & Algorithms-->
+            <!--Computer Organizations & Assembly Language-->
+            <!--Discrete Structures-->
+            <!--Systems Programming-->
+            <!--Database Organization-->
+            <!--Operating Systems-->
+            <!--Programming Language Translators-->
+            <!--Programming Paradigms & Patterns-->
+            <!--Andriod Mobile Developement-->
+            <!--Intro to Web Developement-->
+            <!--Design & Tech Entrepreneurship-->
+        </section>
+        <section>
+            <!--Technical skill section goes here-->
+            <!--Python, Java, C, SQL, Haskell, AWS-->
+        </section>
+        <section>
+            <!--Leadership/activities section goes here-->
+            <!--Co-founder & Software Developer of Square1-->
+            <!--Fundraising Chair for Coffee Club-->
+            <!--Outreach Chair for ACMW-->
+            <!--Member of: SWE, SAE, PRISM, & BBG-->
+            <!--Resident Advisor at IIT-->
+        </section>
+        <section>
+            <!--Awards section goes here-->
+            <!--Best Public Transit Hack @ Deamonshanck-->
+            <!--Illinois State Scholar-->
+            <!--Dean's List @ IIT-->
+            <!--Heald Scholar Recipient-->
+        </section>
     </body>
 
 </html>
