--- a/resume/index.html
+++ b/resume/index.html
@@ -6,54 +6,188 @@
     </head>
 
     <body>
-        <header>
-            <!--Contact information goes here!-->
+        <header class="h-card" >
+            <h1>Lynn Matar</h1>
+            <h2 class="contact-info">
+                Contact Information
+            </h2>
+            <ul class="contact">
+                <li>
+                    <a class="email" href="mailto:lmatar@hawk.iit.edu">lmatar@hawk.iit.edu</a>
+                </li>
+                <li>
+                    <a class="linkedin" href="linkedin.com/in/lynnmatar">LinkedIn Profile</a>
+                </li>
+                <li>
+                    <a class="github" href="github.com/lynnmatar">Github Page</a>
+                </li>
+            </ul>
         </header>
-        <section>
-            <!--Education section goes here-->
-            <!--Illinois Tech-->
+
+        <section class="education">
+            <h2>EDUCATION</h2>
+            <ul class="degree">
+                <li>
+                    <h3>Master of Science (M.S.) in Computer Science</h3>
+                    <ul>
+                        <li>
+                            Illinois Institute of Technology, Chicago, IL
+                        </li>
+                        <li>
+                            Expected Graduation: Dec 2023
+                        </li>
+                        <li>
+                            GPA: 4.0/4.0
+                        </li>
+                    </ul>
+                </li>
+            </ul>
         </section>
-        <section>
-            <!--Experience section goes here-->
-            <!--Technology Summer Analyst @ Accenture-->
-            <!--Software Engineer @ HaxML-->
-            <!--Software Quality Assurance Engineering Intern @ Script Health-->
-            <!--Computer Science Instructor @ Juni Learning-->
-            <!--Interdisciplinary Data Science Consultant @ Accenture/IIT-->
+
+        <section class="experience">
+            <h2>EXPERIENCE</h2>
+            <ul class="work">
+                <!--Technology Analyst @ Accenture-->
+                <li>
+                    <h3 class="worktitle">Technology Summer Anaylyst</h3>
+                    <h4 class="workdescription">Accenture, Minneapolis, MN</h4>
+                    <h4 class="workdate">Jun 2021 - Aug 2021</h4>
+                    <ul class="workdetail">
+                        <li>
+                            Expanded knowledge of AWS architecture and devops
+                        </li>
+                        <li>
+                            Supported migration of application to React Native
+                        </li>
+                        <li>
+                            Research and designed agile roadmap to automated testing for client
+                        </li>
+                        <li>
+                            Tested application using Postman and Soapui
+                        </li>
+                    </ul>
+                </li>
+                <!--Software Engineer @ HaxML-->
+                <li>
+                    <h3 class="worktitle">Software Engineer</h3>
+                    <h4 class="workdescription">HaxML: Virtual Soccer Analytics Platform, Chicago, IL</h4>
+                    <h4 class="workdate">Jan 2021 - Feb 2021</h4>
+                    <ul class="workdetail">
+                        <li>
+                            Developed and deployed machine learning models to predict expected goals from a dataset of 400,000+ kicks and 30 million position data points
+                        </li>
+                        <li>
+                            Optimized the startup time from 7.3 seconds to 2.5 seconds by lazy loading the models in production
+                        </li>
+                        <li>
+                            Technologies: Python, SciKit-Learn, Pandas, Matplotlib
+                        </li>
+                    </ul>
+                </li>
+                <!--Software Quality Assurance Engineering Intern @ Script Health-->
+                <li>
+                    <h3 class="worktitle">Software Quality Assurance Engineering Intern</h3>
+                    <h4 class="workdescription">Script Health, Chicago, IL</h4>
+                    <h4 class="workdate">Oct 2020 - Jan 2021</h4>
+                    <ul class="workdetail">
+                        <li>
+                            Contributed to end-to-end product lifecycle for startup company application
+                        </li>
+                        <li>
+                            Tested all parts of product to ensure design criteria are met to release a market-ready product
+                        </li>
+                        <li>
+                            Created agile requirements to build efficient plan to  communicate test results
+                        </li>
+                    </ul>
+                </li>
+                <!--Computer Science Instructor @ Juni Learning-->
+                <li>
+                    <h3 class="worktitle">Computer Science Instructor</h3>
+                    <h4 class="workdescription">Juni Learning, Remote</h4>
+                    <h4 class="workdate">Oct 2020 - Jun 2021</h4>
+                    <ul class="workdetail">
+                        <li>
+                            Teaching courses in Python, Java, and Scratch
+                        </li>
+                        <li>
+                            Preparing lessons and assigning homework for students between 8-18 years old
+                        </li>
+                        <li>
+                            Communicating with families for feedback on student’s progress
+                        </li>
+                    </ul>
+                </li>
+                <!--Interdisciplinary Data Science Consultant @ Accenture/IIT-->
+                <li>
+                    <h3 class="worktitle">Interdisciplinary Data Science Consultant</h3>
+                    <h4 class="workdescription">Accenture, Chicago, IL</h4>
+                    <h4 class="workdate">Aug 2020 - Dec 2020</h4>
+                    <ul class="workdetail">
+                        <li>
+                            Applying advanced analytic solutions for 3-week sprints that solve hypotheses
+                        </li>
+                        <li>
+                            Consulting business strategists to understand high-level business problems 
+                        </li>
+                        <li>
+                            Utilizing NLP & prediction models, web scraping, and Python libraries
+                        </li>
+                    </ul>
+                </li>
+
+            </ul> 
         </section>
-        <section>
-            <!--Relevant courses section goes here-->
-            <!--Object-Oriented Programming-->
-            <!--Data Structures & Algorithms-->
-            <!--Computer Organizations & Assembly Language-->
-            <!--Discrete Structures-->
-            <!--Systems Programming-->
-            <!--Database Organization-->
-            <!--Operating Systems-->
-            <!--Programming Language Translators-->
-            <!--Programming Paradigms & Patterns-->
-            <!--Andriod Mobile Developement-->
-            <!--Intro to Web Developement-->
-            <!--Design & Tech Entrepreneurship-->
+
+        <section class="courses">
+            <h2>RELEVANT COURSES</h2>
+            <ul class="courseslist">
+                <li>Object-Oriented Programming</li>
+                <li>Data Structures & Algorithms</li>
+                <li>Computer Organizations & Assembly Language</li>
+                <li>Discrete Structures</li>
+                <li>Systems Programming</li>
+                <li>Database Organization</li>
+                <li>Operating Systems</li>
+                <li>Programming Language Translators</li>
+                <li>Programming Paradigms & Patterns</li>
+                <li>Andriod Mobile Developement</li>
+                <li>Intro to Web Developement</li>
+                <li>Design & Tech Entrepreneurship</li>
+            </ul>
         </section>
-        <section>
-            <!--Technical skill section goes here-->
-            <!--Python, Java, C, SQL, Haskell, AWS-->
+
+        <section class="skills">
+            <h2>TECHNICAL SKILLS</h2>
+            <ul class="skillslist">
+                <li>Python</li>
+                <li>Java</li>
+                <li>C</li>
+                <li>SQL</li>
+                <li>Haskell</li>
+                <li>Amazon Web Services</li>
+            </ul>
         </section>
-        <section>
-            <!--Leadership/activities section goes here-->
-            <!--Co-founder & Software Developer of Square1-->
-            <!--Fundraising Chair for Coffee Club-->
-            <!--Outreach Chair for ACMW-->
-            <!--Member of: SWE, SAE, PRISM, & BBG-->
-            <!--Resident Advisor at IIT-->
+
+        <section class="leadership">
+            <h2>LEADERSHIP & ACTIVITIES</h2>
+            <ul class="leadershiplist">
+                <li>Co-founder & Software Developer of Square1</li>
+                <li>Resident Advisor at IIT</li>
+                <li>Fundraising Chair for Coffee Club</li>
+                <li>Outreach Chair for ACMW</li>
+                <li>Member of: SWE, SAE, PRISM, & BBG</li>
+            </ul>
         </section>
-        <section>
-            <!--Awards section goes here-->
-            <!--Best Public Transit Hack @ Deamonshanck-->
-            <!--Illinois State Scholar-->
-            <!--Dean's List @ IIT-->
-            <!--Heald Scholar Recipient-->
+
+        <section class="awards">
+            <h2>AWARDS</h2>
+            <ul class="awardslist">
+                <li>Best Public Transit Hack @ Deamonshanck</li>
+                <li>Illinois State Scholar</li>
+                <li>Dean's List @ IIT</li>
+                <li>Heald Scholar Recipient</li>
+            </ul>
         </section>
     </body>
 
