--- a/index.html
+++ b/index.html
@@ -6,7 +6,52 @@
     </head>
 
     <body>
+        <header class="h-card">
+            <h1>Lynn Matar</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="resume/index.html">Resume</a></li>
+                    <li><a href="blog/index.html">Blog</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <article class="aboutme">
+            <h2>ABOUT</h2>
+            <p>Hey there! My name is Lynn! I'm from Lebanon and I'm a third year computer science major at Illinois Institute of Technology in Chicago.</p>
+            <p>
+                Although school takes up a lot of my time, I have many interests and hobbies such as 
+                longboarding, weight training, playing the guitar, coffee, making puns, trying new foods, 
+                and bullet journaling!
+            </p>
+        </article>
+
+        <article class="schedule">
+            <h2>THIS SEMESTER CLASSES</h2>
+            <!--Maybe want to add a table with blocks to make it look like a calendar later!-->
+            <ul>
+                <li>Introduction to Web Development</li>
+                <li>Mobile Development</li>
+                <li>Interprofessional Design & Tech Entrepreneurship</li>
+                <li>Linear Algebra</li>
+                <li>History of Victorian England</li>
+            </ul>
+        </article>
         
+        <article class="contact">
+            <h2>CONTACT</h2>
+            <!--Maybe add a pic of myself?-->
+            <h4>
+                <a class="email" href="mailto:lmatar@hawk.iit.edu">lmatar@hawk.iit.edu</a>
+            </h4>
+            <h4>
+                <a class="linkedin" href="linkedin.com/in/lynnmatar">LinkedIn Profile</a>
+            </h4>
+            <h4>
+                <a class="github" href="github.com/lynnmatar">Github Page</a>
+            </h4>
+        </article>
     </body>
     
 </html>
