--- a/resume/index.html
+++ b/resume/index.html
@@ -8,8 +8,15 @@
     <body>
         <header class="h-card" >
             <h1>Lynn Matar</h1>
+            <nav>
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="index.html">Resume</a></li>
+                    <li><a href="../blog/index.html">Blog</a></li>
+                </ul>
+            </nav>
             <h2 class="contact-info">
-                Contact Information
+                CONTACT
             </h2>
             <ul class="contact">
                 <li>
