Correcting microformats for resume page header

--- a/resume/index.html
+++ b/resume/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <header class="h-card" >
-            <h1>Lynn Matar</h1>
+            <h1 class="pname">Lynn Matar</h1>
             <nav>
                 <ul>
                     <li><a href="../index.html">Home</a></li>
@@ -20,13 +20,13 @@
             </h2>
             <ul class="contact">
                 <li>
-                    <a class="email" href="mailto:lmatar@hawk.iit.edu">lmatar@hawk.iit.edu</a>
+                    <a class="u-email" href="mailto:lmatar@hawk.iit.edu">lmatar@hawk.iit.edu</a>
                 </li>
                 <li>
-                    <a class="linkedin" href="linkedin.com/in/lynnmatar">LinkedIn Profile</a>
+                    <a class="u-url linkedin" href="linkedin.com/in/lynnmatar">LinkedIn Profile</a>
                 </li>
                 <li>
-                    <a class="github" href="github.com/lynnmatar">Github Page</a>
+                    <a class="u-url github" href="github.com/lynnmatar">Github Page</a>
                 </li>
             </ul>
         </header>
