Add 361 house-style HTMLLint RC and fixing errors from linter for all files

--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
         <main id="contect">
             <article class="aboutme">
                 <h2>ABOUT</h2>
-                <p>Hey there! My name is Lynn! I'm from Lebanon and I'm a third year computer science major at Illinois Institute of Technology in Chicago.</p>
                 <p>
-                    Although school takes up a lot of my time, I have many interests and hobbies such as 
-                    longboarding, weight training, playing the guitar, coffee, making puns, trying new foods, 
+                    Hey there! My name is Lynn! I'm from Lebanon and I'm a third year computer science major at Illinois Institute of
+                    Technology in Chicago.
+                </p>
+                <p>
+                    Although school takes up a lot of my time, I have many interests and hobbies such as
+                    longboarding, weight training, playing the guitar, coffee, making puns, trying new foods,
                     and bullet journaling!
                 </p>
             </article>
@@ -33,12 +36,12 @@
                 <ul>
                     <li>Introduction to Web Development</li>
                     <li>Mobile Development</li>
-                    <li>Interprofessional Design & Tech Entrepreneurship</li>
+                    <li>Interprofessional Design and Tech Entrepreneurship</li>
                     <li>Linear Algebra</li>
                     <li>History of Victorian England</li>
                 </ul>
             </article>
-            
+
             <article class="contact">
                 <h2>CONTACT</h2>
                 <!--Maybe add a pic of myself?-->
@@ -54,5 +57,5 @@
             </article>
         </main>
     </body>
-    
+
 </html>
