--- a/resume/index.html
+++ b/resume/index.html
@@ -81,7 +81,8 @@
                     <h4 class="workdate">Jan 2021 - Feb 2021</h4>
                     <ul class="workdetail">
                         <li>
-                            Developed and deployed machine learning models to predict expected goals from a dataset of 400,000+ kicks and 30 million position data points
+                            Developed and deployed machine learning models to predict expected goals from a dataset of 400,000+ kicks and 30 million
+                            position data points
                         </li>
                         <li>
                             Optimized the startup time from 7.3 seconds to 2.5 seconds by lazy loading the models in production
@@ -135,32 +136,32 @@
                             Applying advanced analytic solutions for 3-week sprints that solve hypotheses
                         </li>
                         <li>
-                            Consulting business strategists to understand high-level business problems 
+                            Consulting business strategists to understand high-level business problems
                         </li>
                         <li>
-                            Utilizing NLP & prediction models, web scraping, and Python libraries
+                            Utilizing NLP and prediction models, web scraping, and Python libraries
                         </li>
                     </ul>
                 </li>
 
-            </ul> 
+            </ul>
         </section>
 
         <section class="courses">
             <h2>RELEVANT COURSES</h2>
             <ul class="courseslist">
                 <li>Object-Oriented Programming</li>
-                <li>Data Structures & Algorithms</li>
-                <li>Computer Organizations & Assembly Language</li>
+                <li>Data Structures and Algorithms</li>
+                <li>Computer Organizations and Assembly Language</li>
                 <li>Discrete Structures</li>
                 <li>Systems Programming</li>
                 <li>Database Organization</li>
                 <li>Operating Systems</li>
                 <li>Programming Language Translators</li>
-                <li>Programming Paradigms & Patterns</li>
+                <li>Programming Paradigms and Patterns</li>
                 <li>Andriod Mobile Developement</li>
                 <li>Intro to Web Developement</li>
-                <li>Design & Tech Entrepreneurship</li>
+                <li>Design and Tech Entrepreneurship</li>
             </ul>
         </section>
 
@@ -177,13 +178,13 @@
         </section>
 
         <section class="leadership">
-            <h2>LEADERSHIP & ACTIVITIES</h2>
+            <h2>LEADERSHIP AND ACTIVITIES</h2>
             <ul class="leadershiplist">
-                <li>Co-founder & Software Developer of Square1</li>
+                <li>Co-founder and Software Developer of Square1</li>
                 <li>Resident Advisor at IIT</li>
                 <li>Fundraising Chair for Coffee Club</li>
                 <li>Outreach Chair for ACMW</li>
-                <li>Member of: SWE, SAE, PRISM, & BBG</li>
+                <li>Member of: SWE, SAE, PRISM, and BBG</li>
             </ul>
         </section>
 
