Editing HTML for resume based on draft feedback

--- a/resume/index.html
+++ b/resume/index.html
@@ -16,7 +16,7 @@
                 </ul>
             </nav>
             <h2 class="contact-info">
-                CONTACT
+                Contact
             </h2>
             <ul class="contact">
                 <li>
@@ -32,7 +32,7 @@
         </header>
 
         <section class="education">
-            <h2>EDUCATION</h2>
+            <h2>Education</h2>
             <ul class="degree">
                 <li>
                     <h3>Master of Science (M.S.) in Computer Science</h3>
@@ -52,103 +52,106 @@
         </section>
 
         <section class="experience">
-            <h2>EXPERIENCE</h2>
+            <h2>Experience</h2>
             <ul class="work">
                 <!--Technology Analyst @ Accenture-->
                 <li>
                     <h3 class="worktitle">Technology Summer Anaylyst</h3>
-                    <h4 class="workdescription">Accenture, Minneapolis, MN</h4>
-                    <h4 class="workdate">Jun 2021 - Aug 2021</h4>
-                    <ul class="workdetail">
-                        <li>
-                            Expanded knowledge of AWS architecture and devops
-                        </li>
-                        <li>
-                            Supported migration of application to React Native
-                        </li>
-                        <li>
-                            Research and designed agile roadmap to automated testing for client
-                        </li>
-                        <li>
-                            Tested application using Postman and Soapui
+                    <ul>
+                        <li class="workdescription">Accenture, Minneapolis, MN</li>
+                        <li class="workdate">Jun 2021 - Aug 2021</li>
+                        <li class="workdetail">
+                            <h4>Responsibilities</h4>
+                            <ul>
+                                <li>
+                                    Expanded knowledge of AWS architecture and devops
+                                </li>
+                                <li>
+                                    Supported migration of application to React Native
+                                </li>
+                                <li>
+                                    Research and designed agile roadmap to automated testing for client
+                                </li>
+                                <li>
+                                    Tested application using Postman and Soapui
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                 </li>
                 <!--Software Engineer @ HaxML-->
                 <li>
                     <h3 class="worktitle">Software Engineer</h3>
-                    <h4 class="workdescription">HaxML: Virtual Soccer Analytics Platform, Chicago, IL</h4>
-                    <h4 class="workdate">Jan 2021 - Feb 2021</h4>
-                    <ul class="workdetail">
-                        <li>
-                            Developed and deployed machine learning models to predict expected goals from a dataset of 400,000+ kicks and 30 million
-                            position data points
-                        </li>
-                        <li>
-                            Optimized the startup time from 7.3 seconds to 2.5 seconds by lazy loading the models in production
-                        </li>
-                        <li>
-                            Technologies: Python, SciKit-Learn, Pandas, Matplotlib
+                    <ul>
+                        <li class="workdescription">HaxML: Virtual Soccer Analytics Platform, Chicago, IL</li>
+                        <li class="workdate">Jan 2021 - Feb 2021</li>
+                        <li class="workdetail">
+                            <h4>Responsibilities</h4>
+                            <ul>
+                                <li>
+                                    Developed and deployed machine learning models to predict expected goals from a dataset of 400,000+ kicks and 30 million
+                                    position data points
+                                </li>
+                                <li>
+                                    Optimized the startup time from 7.3 seconds to 2.5 seconds by lazy loading the models in production
+                                </li>
+                                <li>
+                                    Technologies: Python, SciKit-Learn, Pandas, Matplotlib
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                 </li>
                 <!--Software Quality Assurance Engineering Intern @ Script Health-->
                 <li>
                     <h3 class="worktitle">Software Quality Assurance Engineering Intern</h3>
-                    <h4 class="workdescription">Script Health, Chicago, IL</h4>
-                    <h4 class="workdate">Oct 2020 - Jan 2021</h4>
-                    <ul class="workdetail">
-                        <li>
-                            Contributed to end-to-end product lifecycle for startup company application
-                        </li>
-                        <li>
-                            Tested all parts of product to ensure design criteria are met to release a market-ready product
-                        </li>
-                        <li>
-                            Created agile requirements to build efficient plan to  communicate test results
+                    <ul>
+                        <li class="workdescription">Script Health, Chicago, IL</li>
+                        <li class="workdate">Oct 2020 - Jan 2021</li>
+                        <li class="workdetail">
+                            <h4>Responsibilities</h4>
+                            <ul>
+                                <li>
+                                    Contributed to end-to-end product lifecycle for startup company application
+                                </li>
+                                <li>
+                                    Tested all parts of product to ensure design criteria are met to release a market-ready product
+                                </li>
+                                <li>
+                                    Created agile requirements to build efficient plan to  communicate test results
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                 </li>
                 <!--Computer Science Instructor @ Juni Learning-->
                 <li>
                     <h3 class="worktitle">Computer Science Instructor</h3>
-                    <h4 class="workdescription">Juni Learning, Remote</h4>
-                    <h4 class="workdate">Oct 2020 - Jun 2021</h4>
-                    <ul class="workdetail">
-                        <li>
-                            Teaching courses in Python, Java, and Scratch
-                        </li>
-                        <li>
-                            Preparing lessons and assigning homework for students between 8-18 years old
-                        </li>
-                        <li>
-                            Communicating with families for feedback on student’s progress
+                    <ul>
+                        <li class="workdescription">Juni Learning, RemoteL</li>
+                        <li class="workdate">Oct 2020 - Jun 2021</li>
+                        <li class="workdetail">
+                            <h4>Responsibilities</h4>
+                            <ul>
+                                <li>
+                                    Teaching courses in Python, Java, and Scratch
+                                </li>
+                                <li>
+                                    Preparing lessons and assigning homework for students between 8-18 years old
+                                </li>
+                                <li>
+                                    Communicating with families for feedback on student’s progress
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                 </li>
-                <!--Interdisciplinary Data Science Consultant @ Accenture/IIT-->
                 <li>
-                    <h3 class="worktitle">Interdisciplinary Data Science Consultant</h3>
-                    <h4 class="workdescription">Accenture, Chicago, IL</h4>
-                    <h4 class="workdate">Aug 2020 - Dec 2020</h4>
-                    <ul class="workdetail">
-                        <li>
-                            Applying advanced analytic solutions for 3-week sprints that solve hypotheses
-                        </li>
-                        <li>
-                            Consulting business strategists to understand high-level business problems
-                        </li>
-                        <li>
-                            Utilizing NLP and prediction models, web scraping, and Python libraries
-                        </li>
-                    </ul>
-                </li>
-
             </ul>
         </section>
 
         <section class="courses">
-            <h2>RELEVANT COURSES</h2>
+            <h2>Relevant Courses</h2>
             <ul class="courseslist">
                 <li>Object-Oriented Programming</li>
                 <li>Data Structures and Algorithms</li>
@@ -166,7 +169,7 @@
         </section>
 
         <section class="skills">
-            <h2>TECHNICAL SKILLS</h2>
+            <h2>Technical Skills</h2>
             <ul class="skillslist">
                 <li>Python</li>
                 <li>Java</li>
@@ -178,7 +181,7 @@
         </section>
 
         <section class="leadership">
-            <h2>LEADERSHIP AND ACTIVITIES</h2>
+            <h2>Leadership and Activities</h2>
             <ul class="leadershiplist">
                 <li>Co-founder and Software Developer of Square1</li>
                 <li>Resident Advisor at IIT</li>
@@ -189,7 +192,7 @@
         </section>
 
         <section class="awards">
-            <h2>AWARDS</h2>
+            <h2>Awards</h2>
             <ul class="awardslist">
                 <li>Best Public Transit Hack @ Deamonshanck</li>
                 <li>Illinois State Scholar</li>
