--- a/history/index.html
+++ b/history/index.html
@@ -8,11 +8,12 @@
     <body>
         <header class="h-card">
             <h1>Lynn Matar</h1>
-            <nav>
+            <nav id="navigation">
+                <h2>Menu</h2>
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/resume/index.html">Resume</a></li>
-                    <li><a href="/history/index.html">History</a></li>
+                  <li><a href="/">Home</a></li>
+                  <li><a href="/resume/">Resume</a></li>
+                  <li><a href="/history">History</a></li>
                 </ul>
             </nav>
         </header>
