--- a/resume/index.html
+++ b/resume/index.html
@@ -8,11 +8,12 @@
     <body>
         <header class="h-card" >
             <h1 class="pname">Lynn Matar</h1>
-            <nav>
+            <nav id="navigation">
+                <h2>Menu</h2>
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="index.html">Resume</a></li>
-                    <li><a href="../blog/index.html">Blog</a></li>
+                  <li><a href="/">Home</a></li>
+                  <li><a href="/resume/">Resume</a></li>
+                  <li><a href="/history">History</a></li>
                 </ul>
             </nav>
             <h2 class="contact-info">
