--- a/history/index.html
+++ b/history/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title> Ada Lovelance History: Lynn Matar</title>
+    <title> Ada Lovelance History</title>
     <meta charset="UTF-8"/>
   </head>
 
