Unstaged files for previous commit

--- a/resume/index.html
+++ b/resume/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-      <title>Resume: Lynn Matar</title>
-      <meta charset="UTF-8"/>
+    <title>Resume: Lynn Matar</title>
+    <meta charset="UTF-8"/>
   </head>
 
   <body>
@@ -18,15 +18,15 @@
       </nav>
       <h2 class="contact-info">Contact</h2>
       <ul class="contact">
-          <li>
-            <a class="u-email" href="mailto:lmatar@hawk.iit.edu">lmatar@hawk.iit.edu</a>
-          </li>
-          <li>
-            <a class="u-url linkedin" href="linkedin.com/in/lynnmatar">LinkedIn Profile</a>
-          </li>
-          <li>
-            <a class="u-url github" href="github.com/lynnmatar">Github Page</a>
-          </li>
+        <li>
+          <a class="u-email" href="mailto:lmatar@hawk.iit.edu">lmatar@hawk.iit.edu</a>
+        </li>
+        <li>
+          <a class="u-url linkedin" href="linkedin.com/in/lynnmatar">LinkedIn Profile</a>
+        </li>
+        <li>
+          <a class="u-url github" href="github.com/lynnmatar">Github Page</a>
+        </li>
       </ul>
     </header>
 
@@ -151,51 +151,105 @@
     <section class="courses">
       <h2>Relevant Courses</h2>
       <ul class="courseslist">
-        <li>Object-Oriented Programming</li>
-        <li>Data Structures and Algorithms</li>
-        <li>Computer Organizations and Assembly Language</li>
-        <li>Discrete Structures</li>
-        <li>Systems Programming</li>
-        <li>Database Organization</li>
-        <li>Operating Systems</li>
-        <li>Programming Language Translators</li>
-        <li>Programming Paradigms and Patterns</li>
-        <li>Andriod Mobile Developement</li>
-        <li>Intro to Web Developement</li>
-        <li>Design and Tech Entrepreneurship</li>
+        <li>
+          Object-Oriented Programming
+        </li>
+        <li>
+          Data Structures and Algorithms
+        </li>
+        <li>
+          Computer Organizations and Assembly Language
+        </li>
+        <li>
+          Discrete Structures
+        </li>
+        <li>
+          Systems Programming
+        </li>
+        <li>
+          Database Organization
+        </li>
+        <li>
+          Operating Systems
+        </li>
+        <li>
+          Programming Language Translators
+        </li>
+        <li>
+          Programming Paradigms and Patterns
+        </li>
+        <li>
+          Andriod Mobile Developement
+        </li>
+        <li>
+          Intro to Web Developement
+        </li>
+        <li>
+          Design and Tech Entrepreneurship
+        </li>
       </ul>
     </section>
 
     <section class="skills">
       <h2>Technical Skills</h2>
       <ul class="skillslist">
-        <li>Python</li>
-        <li>Java</li>
-        <li>C</li>
-        <li>SQL</li>
-        <li>Haskell</li>
-        <li>Amazon Web Services</li>
+        <li>
+          Python
+        </li>
+        <li>
+          Java
+        </li>
+        <li>
+          C
+        </li>
+        <li>
+          SQL
+        </li>
+        <li>
+          Haskell
+        </li>
+        <li>
+          Amazon Web Services
+        </li>
       </ul>
     </section>
 
     <section class="leadership">
       <h2>Leadership and Activities</h2>
       <ul class="leadershiplist">
-        <li>Co-founder and Software Developer of Square1</li>
-        <li>Resident Advisor at IIT</li>
-        <li>Fundraising Chair for Coffee Club</li>
-        <li>Outreach Chair for ACMW</li>
-        <li>Member of: SWE, SAE, PRISM, and BBG</li>
+        <li>
+          Co-founder and Software Developer of Square1
+        </li>
+        <li>
+          Resident Advisor at IIT
+        </li>
+        <li>
+          Fundraising Chair for Coffee Club
+        </li>
+        <li>
+          Outreach Chair for ACMW
+        </li>
+        <li>
+          Member of: SWE, SAE, PRISM, and BBG
+        </li>
       </ul>
     </section>
 
     <section class="awards">
       <h2>Awards</h2>
       <ul class="awardslist">
-        <li>Best Public Transit Hack @ Deamonshanck</li>
-        <li>Illinois State Scholar</li>
-        <li>Dean's List @ IIT</li>
-        <li>Heald Scholar Recipient</li>
+        <li>
+          Best Public Transit Hack @ Deamonshanck
+        </li>
+        <li>
+          Illinois State Scholar
+        </li>
+        <li>
+          Dean's List @ IIT
+        </li>
+        <li>
+          Heald Scholar Recipient
+        </li>
       </ul>
     </section>
 
