Add footer to all pages on site

--- a/history/index.html
+++ b/history/index.html
@@ -32,6 +32,11 @@
       <h2>CS Nerd stuff</h2>
       <p>(MORE CONTENT WILL COME SOON)</p>
     </article>
+
+    <footer id="footer">
+      Site was created &copy; by Lynn Matar.
+      <a href="https://github.com/lmatar/Website-LynnMatar">Source code available on GitHub</a>.
+    </footer>
   </body>
 
 </html>
