--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
         </h4>
       </article>
     </main>
+
+    <footer id="footer">
+      Site was created &copy; by Lynn Matar.
+      <a href="https://github.com/lmatar/Website-LynnMatar">Source code available on GitHub</a>.
+    </footer>
   </body>
 
 </html>
