--- a/resume/index.html
+++ b/resume/index.html
@@ -253,5 +253,10 @@
       </ul>
     </section>
 
+    <footer id="footer">
+      Site was created &copy; by Lynn Matar.
+      <a href="https://github.com/lmatar/Website-LynnMatar">Source code available on GitHub</a>.
+    </footer>
+
   </body>
 </html>
