--- a/history/index.html
+++ b/history/index.html
@@ -18,25 +18,182 @@
       </nav>
     </header>
 
+    <!--Want a "card" style website so each article would be its own card with information about Ada or het father-->
+
     <article class="about">
-      <h2>Who is Ada Lovelance</h2>
-      <p>(MORE CONTENT COMING SOON)</p>
+      <h2>Who is Ada Lovelance?</h2>
+      <p>
+        Ada Lovelace was born on December 10 1815 in London, was a Victorian-era mathematician who is well known
+        for her work with <a href="https://www.britannica.com/biography/Charles-Babbage">Charles Babbage </a> on the <a href="https://www.britannica.com/technology/Analytical-Engine">Analytic Engine</a> and is widely celebrated as the first computer
+        programmer.
+      </p>
     </article>
 
-    <article class="father">
-      <h2>Lord Byron</h2>
-      <p>(MORE CONTENT COMING SOON) </p>
+    <article id="adapictures">
+      <h2>These are some well known paintings and drawings of Ada Lovelance</h2>
+      <figure>
+        <img src="/assets/img/ada-drawing.jpg" alt="Black and white drawing of Ada Lovelance" />
+        <figcaption>
+          Ada Lovelance black and white drawing.
+        </figcaption>
+      </figure>
+
+      <figure>
+        <img src="/assets/img/ada-color.jpg" alt="Colorful painting of Ada Lovelance" />
+        <figcaption>
+          Ada Lovelance dressed up in beautiful purple dress.
+        </figcaption>
+      </figure>
+
+      <figure>
+        <img src="/assets/img/Ada-whitedress.jpg" alt="Painting of Ada Lovelance in a white dress" />
+        <figcaption>
+          Painting of Ada Lovelance in a white dress
+        </figcaption>
+      </figure>
     </article>
 
     <article class="computing">
-      <h2>CS Nerd stuff</h2>
-      <p>(MORE CONTENT WILL COME SOON)</p>
+      <h2>Women in CS</h2>
+      <h3>
+        To all feminist CS nerds: Don't forget that Ada Lovelance was the first programmer EVER and she was a WOMAN.
+      </h3>
+      <p>
+        Ada Lovelance had a huge impact of computer programming.
+      </p>
+    </article>
+
+    <article class="funfacts">
+      <h2>Random Fun Facts</h2>
+      <ul>
+        <li>
+          Augusta “Ada” Byron was her birth name!
+        </li>
+        <li>
+          She was the only "legitamate" child from her father.
+        </li>
+        <li>
+          Ada did not have a loving family due to the fact that:
+          <ul>
+            <li>
+              Her father wanted a boy child and never cared for her
+            </li>
+            <li>
+              Her mother and father had a bad divorse and she hated him
+            </li>
+            <li>
+              Ada tried to escape her mother because she thought she was a dissapointment
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </article>
+
+    <article class="faq">
+      <h2>FAQ on Ada Lovelance</h2>
+      <ul>
+        <li>
+          Does Ada Lovelance have a "holiday"?
+          <ul>
+            <li>
+              Ada Lovelance was so important and impactful to this world that there is an <strong>Ada Lovelance Day</strong>
+              that on <strong>October 12</strong> every year!
+            </li>
+            <li>
+              <figure>
+                <img src="/assets/img/ada-gif.gif" alt="Funny gif for Ada Lovelance Day" />
+                <figcaption>
+                  Gif of Ada Lovelance
+                </figcaption>
+              </figure>
+            </li>
+          </ul>
+        </li>
+        <li>
+          Was Ada Lovelance queer?
+          <ul>
+            <li>
+              Many believe that Ada may have been queer but there is no facts/information that shows that as of right now.
+              Her father, Lord Byron, was.
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </article>
+
+    <article class="byron">
+      <h2>Lord Byron</h2>
+      <figure>
+        <img src="/assets/img/ada-and-father.jpg" alt="Two paintings with Ada and her Father" />
+        <figcaption>
+          Paintings of Ada and her father, Lord Byron.
+        </figcaption>
+      </figure>
+      <h3>Who was Lord Byron?</h3>
+      <p>
+        Lord Byron was one of the leading figures of the Romantic Movement in early 19th century England.
+        He was well known for his sexual escapades and his beautiful and brilliany peotry writings. Here is an example of a very famous one:
+      </p>
+      <figure>
+        <img src="/assets/img/byron-poem.jpg" alt="Famous poem by Lord Byron" />
+        <figcaption>
+          Lord Byron's famous poem about loving men.
+        </figcaption>
+      </figure>
+      <h3>What was his impactLord Byron?</h3>
+      <p>
+        Lord Byron's bisexuality was known "on the street" because he was very open about it at a time when it wasnt "acceptable". Unfortunetly,
+        it was well known that Byron did not treat women well and some even said he was a "womanizer". A lot of his life was spent trying to
+        actively support the Greek struggle for independence from Ottoman rule. There are many queer folks today who Lord Byron influences
+        many through his poetry and sexuality.
+      </p>
+    </article>
+
+    <!--Potentially add a section about Babbage here in the future-->
+
+    <article class="game">
+      <h2>Fun Interactive Ada Lovelance Game</h2>
+      <p>
+        <a href="https://www.brainpop.com/games/timezonexadalovelace/">This site</a> is a great way to learn more about Ada Lovelance and milestones/important events that
+        happen during her life. It is an interactive timeline game where you learn about an event and pick where it fits
+        in the timeline!
+      </p>
+    </article>
+
+    <article class="citations">
+      <h2>Bibliography</h2>
+      <ol>
+        <li>
+          Aiello, Luigia Carlucci. <cite>“The Multifaceted Impact of Ada Lovelace in the Digital Age.”</cite> Artificial Intelligence,
+          Elsevier, 2 Mar. 2016, https://www.sciencedirect.com/science/article/pii/S0004370216300224.
+        </li>
+        <li>
+          <cite>“Analytical Engine.”</cite> Encyclopædia Britannica, Encyclopædia Britannica, Inc.,
+          https://www.britannica.com/technology/Analytical-Engine.
+        </li>
+        <li>
+          <cite>“Byron and Don Juan: A Case Study and Queer ... - UTC Scholar.”</cite> Byron and Don Juan,
+          https://scholar.utc.edu/cgi/viewcontent.cgi?article=1273&amp;context=honors-theses.
+        </li>
+        <li>
+          <cite>“Lord Byron.”</cite> Biography.com, A&amp;E Networks Television, 22 June 2020, https://www.biography.com/writer/lord-byron.
+        </li>
+        <li>
+          Morais, Betsy. <cite>“Ada Lovelace, the First Tech Visionary.”</cite> The New Yorker, 15 Oct. 2013,
+          https://www.newyorker.com/tech/annals-of-technology/ada-lovelace-the-first-tech-visionary.
+        </li>
+        <li>
+          Wolfram, Stephen. <cite>“Untangling the Tale of Ada Lovelace.”</cite> Wired, Conde Nast, 22 Dec. 2015,
+          https://www.wired.com/2015/12/untangling-the-tale-of-ada-lovelace/.
+        </li>
+      </ol>
     </article>
 
     <footer id="footer">
       Site was created &copy; by Lynn Matar.
       <a href="https://github.com/lmatar/Website-LynnMatar">Source code available on GitHub</a>.
     </footer>
+
   </body>
 
 </html>
