Minor grammar edits for history page

--- a/history/index.html
+++ b/history/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title> Ada Lovelance History</title>
+    <title> Ada Lovelace History</title>
     <meta charset="UTF-8"/>
   </head>
 
@@ -21,7 +21,7 @@
     <!--Want a "card" style website so each article would be its own card with information about Ada or het father-->
 
     <article class="about">
-      <h2>Who is Ada Lovelance?</h2>
+      <h2>Who is Ada Lovelace?</h2>
       <p>
         Ada Lovelace was born on December 10 1815 in London, was a Victorian-era mathematician who is well known
         for her work with <a href="https://www.britannica.com/biography/Charles-Babbage">Charles Babbage </a> on the <a href="https://www.britannica.com/technology/Analytical-Engine">Analytic Engine</a> and is widely celebrated as the first computer
@@ -30,25 +30,25 @@
     </article>
 
     <article id="adapictures">
-      <h2>These are some well known paintings and drawings of Ada Lovelance</h2>
+      <h2>These are some well known paintings and drawings of Ada Lovelace</h2>
       <figure>
-        <img src="/assets/img/ada-drawing.jpg" alt="Black and white drawing of Ada Lovelance" />
+        <img src="/assets/img/ada-drawing.jpg" alt="Black and white drawing of Ada Lovelace" />
         <figcaption>
-          Ada Lovelance black and white drawing.
+          Ada Lovelace black and white drawing.
         </figcaption>
       </figure>
 
       <figure>
-        <img src="/assets/img/ada-color.jpg" alt="Colorful painting of Ada Lovelance" />
+        <img src="/assets/img/ada-color.jpg" alt="Colorful painting of Ada Lovelace" />
         <figcaption>
-          Ada Lovelance dressed up in beautiful purple dress.
+          Ada Lovelace dressed up in beautiful purple dress.
         </figcaption>
       </figure>
 
       <figure>
-        <img src="/assets/img/Ada-whitedress.jpg" alt="Painting of Ada Lovelance in a white dress" />
+        <img src="/assets/img/Ada-whitedress.jpg" alt="Painting of Ada Lovelace in a white dress" />
         <figcaption>
-          Painting of Ada Lovelance in a white dress
+          Painting of Ada Lovelace in a white dress
         </figcaption>
       </figure>
     </article>
@@ -56,10 +56,10 @@
     <article class="computing">
       <h2>Women in CS</h2>
       <h3>
-        To all feminist CS nerds: Don't forget that Ada Lovelance was the first programmer EVER and she was a WOMAN.
+        To all feminist CS nerds: Don't forget that Ada Lovelace was the first programmer EVER and she was a WOMAN.
       </h3>
       <p>
-        Ada Lovelance had a huge impact of computer programming.
+        Ada Lovelace had a huge impact of computer programming.
       </p>
     </article>
 
@@ -90,27 +90,27 @@
     </article>
 
     <article class="faq">
-      <h2>FAQ on Ada Lovelance</h2>
+      <h2>FAQ on Ada Lovelace</h2>
       <ul>
         <li>
-          Does Ada Lovelance have a "holiday"?
+          Does Ada Lovelace have a "holiday"?
           <ul>
             <li>
-              Ada Lovelance was so important and impactful to this world that there is an <strong>Ada Lovelance Day</strong>
+              Ada Lovelace was so important and impactful to this world that there is an <strong>Ada Lovelace Day</strong>
               that on <strong>October 12</strong> every year!
             </li>
             <li>
               <figure>
-                <img src="/assets/img/ada-gif.gif" alt="Funny gif for Ada Lovelance Day" />
+                <img src="/assets/img/ada-gif.gif" alt="Funny gif for Ada Lovelace Day" />
                 <figcaption>
-                  Gif of Ada Lovelance
+                  Gif of Ada Lovelace
                 </figcaption>
               </figure>
             </li>
           </ul>
         </li>
         <li>
-          Was Ada Lovelance queer?
+          Was Ada Lovelace queer?
           <ul>
             <li>
               Many believe that Ada may have been queer but there is no facts/information that shows that as of right now.
@@ -140,7 +140,7 @@
           Lord Byron's famous poem about loving men.
         </figcaption>
       </figure>
-      <h3>What was his impactLord Byron?</h3>
+      <h3>What was his impact?</h3>
       <p>
         Lord Byron's bisexuality was known "on the street" because he was very open about it at a time when it wasnt "acceptable". Unfortunetly,
         it was well known that Byron did not treat women well and some even said he was a "womanizer". A lot of his life was spent trying to
@@ -152,9 +152,9 @@
     <!--Potentially add a section about Babbage here in the future-->
 
     <article class="game">
-      <h2>Fun Interactive Ada Lovelance Game</h2>
+      <h2>Fun Interactive Ada Lovelace Game</h2>
       <p>
-        <a href="https://www.brainpop.com/games/timezonexadalovelace/">This site</a> is a great way to learn more about Ada Lovelance and milestones/important events that
+        <a href="https://www.brainpop.com/games/timezonexadalovelace/">This site</a> is a great way to learn more about Ada Lovelace and milestones/important events that
         happen during her life. It is an interactive timeline game where you learn about an event and pick where it fits
         in the timeline!
       </p>
