Move css into assets folder and begin typographic grid and styling for header for all pages

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="g">
   <head>
     <title>Home: Lynn Matar</title>
     <meta charset="UTF-8"/>
+    <link rel="stylesheet" href="/assets/css/screen.css" />
   </head>
 
   <body>
-    <header class="h-card">
+    <header id="header">
       <h1>Lynn Matar</h1>
       <nav id="navigation">
         <h2>Menu</h2>
@@ -17,7 +18,7 @@
         </ul>
       </nav>
     </header>
-    <main id="contect">
+    <main id="content">
       <article class="aboutme">
         <h2>About</h2>
         <p>
