--- a/history/index.html
+++ b/history/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="g">
   <head>
     <title> Ada Lovelace History</title>
     <meta charset="UTF-8"/>
+    <link rel="stylesheet" href="/assets/css/screen.css" />
   </head>
 
   <body>
-    <header class="h-card">
+    <header id="header">
       <h1>Lynn Matar</h1>
       <nav id="navigation">
         <h2>Menu</h2>
