--- a/resume/index.html
+++ b/resume/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="g">
   <head>
     <title>Resume: Lynn Matar</title>
     <meta charset="UTF-8"/>
+    <link rel="stylesheet" href="/assets/css/screen.css" />
   </head>
 
   <body>
-    <header class="h-card" >
+    <header id="header" >
       <h1 class="pname">Lynn Matar</h1>
       <nav id="navigation">
         <h2>Menu</h2>
@@ -16,6 +17,9 @@
           <li><a href="/history">History</a></li>
         </ul>
       </nav>
+    </header>
+    <main id="content">
+      
       <h2 class="contact-info">Contact</h2>
       <ul class="contact">
         <li>
@@ -28,230 +32,230 @@
           <a class="u-url github" href="github.com/lynnmatar">Github Page</a>
         </li>
       </ul>
-    </header>
+    
+      <section class="education">
+        <h2>Education</h2>
+        <ul class="degree">
+          <li>
+            <h3>Master of Science (M.S.) in Computer Science</h3>
+            <ul>
+              <li>
+                Illinois Institute of Technology, Chicago, IL
+              </li>
+              <li>
+                Expected Graduation: Dec 2023
+              </li>
+              <li>
+                GPA: 4.0/4.0
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </section>
 
-    <section class="education">
-      <h2>Education</h2>
-      <ul class="degree">
-        <li>
-          <h3>Master of Science (M.S.) in Computer Science</h3>
-          <ul>
-            <li>
-              Illinois Institute of Technology, Chicago, IL
-            </li>
-            <li>
-              Expected Graduation: Dec 2023
-            </li>
-            <li>
-              GPA: 4.0/4.0
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </section>
+      <section class="experience">
+        <h2>Experience</h2>
+        <ul class="work">
+          <!--Technology Analyst @ Accenture-->
+          <li>
+            <h3 class="worktitle">Technology Summer Anaylyst</h3>
+            <ul>
+              <li class="workdescription">Accenture, Minneapolis, MN</li>
+              <li class="workdate">Jun 2021 - Aug 2021</li>
+              <li class="workdetail">
+                <h4>Responsibilities</h4>
+                <ul>
+                  <li>
+                    Expanded knowledge of AWS architecture and devops
+                  </li>
+                  <li>
+                    Supported migration of application to React Native
+                  </li>
+                  <li>
+                    Research and designed agile roadmap to automated testing for client
+                  </li>
+                  <li>
+                    Tested application using Postman and Soapui
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+          <!--Software Engineer @ HaxML-->
+          <li>
+            <h3 class="worktitle">Software Engineer</h3>
+            <ul>
+              <li class="workdescription">HaxML: Virtual Soccer Analytics Platform, Chicago, IL</li>
+              <li class="workdate">Jan 2021 - Feb 2021</li>
+              <li class="workdetail">
+                <h4>Responsibilities</h4>
+                <ul>
+                  <li>
+                    Developed and deployed machine learning models to predict expected goals from a dataset of 400,000+
+                    kicks and 30 million position data points
+                  </li>
+                  <li>
+                    Optimized the startup time from 7.3 seconds to 2.5 seconds by lazy loading the models in production
+                  </li>
+                  <li>
+                    Technologies: Python, SciKit-Learn, Pandas, Matplotlib
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+          <!--Software Quality Assurance Engineering Intern @ Script Health-->
+          <li>
+            <h3 class="worktitle">Software Quality Assurance Engineering Intern</h3>
+            <ul>
+              <li class="workdescription">Script Health, Chicago, IL</li>
+              <li class="workdate">Oct 2020 - Jan 2021</li>
+              <li class="workdetail">
+                <h4>Responsibilities</h4>
+                <ul>
+                  <li>
+                    Contributed to end-to-end product lifecycle for startup company application
+                  </li>
+                  <li>
+                    Tested all parts of product to ensure design criteria are met to release a market-ready product
+                  </li>
+                  <li>
+                    Created agile requirements to build efficient plan to  communicate test results
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+          <!--Computer Science Instructor @ Juni Learning-->
+          <li>
+            <h3 class="worktitle">Computer Science Instructor</h3>
+            <ul>
+              <li class="workdescription">Juni Learning, RemoteL</li>
+              <li class="workdate">Oct 2020 - Jun 2021</li>
+              <li class="workdetail">
+                <h4>Responsibilities</h4>
+                <ul>
+                  <li>
+                    Teaching courses in Python, Java, and Scratch
+                  </li>
+                  <li>
+                    Preparing lessons and assigning homework for students between 8-18 years old
+                  </li>
+                  <li>
+                    Communicating with families for feedback on student’s progress
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </section>
 
-    <section class="experience">
-      <h2>Experience</h2>
-      <ul class="work">
-        <!--Technology Analyst @ Accenture-->
-        <li>
-          <h3 class="worktitle">Technology Summer Anaylyst</h3>
-          <ul>
-            <li class="workdescription">Accenture, Minneapolis, MN</li>
-            <li class="workdate">Jun 2021 - Aug 2021</li>
-            <li class="workdetail">
-              <h4>Responsibilities</h4>
-              <ul>
-                <li>
-                  Expanded knowledge of AWS architecture and devops
-                </li>
-                <li>
-                  Supported migration of application to React Native
-                </li>
-                <li>
-                  Research and designed agile roadmap to automated testing for client
-                </li>
-                <li>
-                  Tested application using Postman and Soapui
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-        <!--Software Engineer @ HaxML-->
-        <li>
-          <h3 class="worktitle">Software Engineer</h3>
-          <ul>
-            <li class="workdescription">HaxML: Virtual Soccer Analytics Platform, Chicago, IL</li>
-            <li class="workdate">Jan 2021 - Feb 2021</li>
-            <li class="workdetail">
-              <h4>Responsibilities</h4>
-              <ul>
-                <li>
-                  Developed and deployed machine learning models to predict expected goals from a dataset of 400,000+
-                  kicks and 30 million position data points
-                </li>
-                <li>
-                  Optimized the startup time from 7.3 seconds to 2.5 seconds by lazy loading the models in production
-                </li>
-                <li>
-                  Technologies: Python, SciKit-Learn, Pandas, Matplotlib
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-        <!--Software Quality Assurance Engineering Intern @ Script Health-->
-        <li>
-          <h3 class="worktitle">Software Quality Assurance Engineering Intern</h3>
-          <ul>
-            <li class="workdescription">Script Health, Chicago, IL</li>
-            <li class="workdate">Oct 2020 - Jan 2021</li>
-            <li class="workdetail">
-              <h4>Responsibilities</h4>
-              <ul>
-                <li>
-                  Contributed to end-to-end product lifecycle for startup company application
-                </li>
-                <li>
-                  Tested all parts of product to ensure design criteria are met to release a market-ready product
-                </li>
-                <li>
-                  Created agile requirements to build efficient plan to  communicate test results
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-        <!--Computer Science Instructor @ Juni Learning-->
-        <li>
-          <h3 class="worktitle">Computer Science Instructor</h3>
-          <ul>
-            <li class="workdescription">Juni Learning, RemoteL</li>
-            <li class="workdate">Oct 2020 - Jun 2021</li>
-            <li class="workdetail">
-              <h4>Responsibilities</h4>
-              <ul>
-                <li>
-                  Teaching courses in Python, Java, and Scratch
-                </li>
-                <li>
-                  Preparing lessons and assigning homework for students between 8-18 years old
-                </li>
-                <li>
-                  Communicating with families for feedback on student’s progress
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </section>
+      <section class="courses">
+        <h2>Relevant Courses</h2>
+        <ul class="courseslist">
+          <li>
+            Object-Oriented Programming
+          </li>
+          <li>
+            Data Structures and Algorithms
+          </li>
+          <li>
+            Computer Organizations and Assembly Language
+          </li>
+          <li>
+            Discrete Structures
+          </li>
+          <li>
+            Systems Programming
+          </li>
+          <li>
+            Database Organization
+          </li>
+          <li>
+            Operating Systems
+          </li>
+          <li>
+            Programming Language Translators
+          </li>
+          <li>
+            Programming Paradigms and Patterns
+          </li>
+          <li>
+            Andriod Mobile Developement
+          </li>
+          <li>
+            Intro to Web Developement
+          </li>
+          <li>
+            Design and Tech Entrepreneurship
+          </li>
+        </ul>
+      </section>
 
-    <section class="courses">
-      <h2>Relevant Courses</h2>
-      <ul class="courseslist">
-        <li>
-          Object-Oriented Programming
-        </li>
-        <li>
-          Data Structures and Algorithms
-        </li>
-        <li>
-          Computer Organizations and Assembly Language
-        </li>
-        <li>
-          Discrete Structures
-        </li>
-        <li>
-          Systems Programming
-        </li>
-        <li>
-          Database Organization
-        </li>
-        <li>
-          Operating Systems
-        </li>
-        <li>
-          Programming Language Translators
-        </li>
-        <li>
-          Programming Paradigms and Patterns
-        </li>
-        <li>
-          Andriod Mobile Developement
-        </li>
-        <li>
-          Intro to Web Developement
-        </li>
-        <li>
-          Design and Tech Entrepreneurship
-        </li>
-      </ul>
-    </section>
+      <section class="skills">
+        <h2>Technical Skills</h2>
+        <ul class="skillslist">
+          <li>
+            Python
+          </li>
+          <li>
+            Java
+          </li>
+          <li>
+            C
+          </li>
+          <li>
+            SQL
+          </li>
+          <li>
+            Haskell
+          </li>
+          <li>
+            Amazon Web Services
+          </li>
+        </ul>
+      </section>
 
-    <section class="skills">
-      <h2>Technical Skills</h2>
-      <ul class="skillslist">
-        <li>
-          Python
-        </li>
-        <li>
-          Java
-        </li>
-        <li>
-          C
-        </li>
-        <li>
-          SQL
-        </li>
-        <li>
-          Haskell
-        </li>
-        <li>
-          Amazon Web Services
-        </li>
-      </ul>
-    </section>
+      <section class="leadership">
+        <h2>Leadership and Activities</h2>
+        <ul class="leadershiplist">
+          <li>
+            Co-founder and Software Developer of Square1
+          </li>
+          <li>
+            Resident Advisor at IIT
+          </li>
+          <li>
+            Fundraising Chair for Coffee Club
+          </li>
+          <li>
+            Outreach Chair for ACMW
+          </li>
+          <li>
+            Member of: SWE, SAE, PRISM, and BBG
+          </li>
+        </ul>
+      </section>
 
-    <section class="leadership">
-      <h2>Leadership and Activities</h2>
-      <ul class="leadershiplist">
-        <li>
-          Co-founder and Software Developer of Square1
-        </li>
-        <li>
-          Resident Advisor at IIT
-        </li>
-        <li>
-          Fundraising Chair for Coffee Club
-        </li>
-        <li>
-          Outreach Chair for ACMW
-        </li>
-        <li>
-          Member of: SWE, SAE, PRISM, and BBG
-        </li>
-      </ul>
-    </section>
-
-    <section class="awards">
-      <h2>Awards</h2>
-      <ul class="awardslist">
-        <li>
-          Best Public Transit Hack @ Deamonshanck
-        </li>
-        <li>
-          Illinois State Scholar
-        </li>
-        <li>
-          Dean's List @ IIT
-        </li>
-        <li>
-          Heald Scholar Recipient
-        </li>
-      </ul>
-    </section>
+      <section class="awards">
+        <h2>Awards</h2>
+        <ul class="awardslist">
+          <li>
+            Best Public Transit Hack @ Deamonshanck
+          </li>
+          <li>
+            Illinois State Scholar
+          </li>
+          <li>
+            Dean's List @ IIT
+          </li>
+          <li>
+            Heald Scholar Recipient
+          </li>
+        </ul>
+      </section>
+    </main>
 
     <footer id="footer">
       Site was created &copy; by Lynn Matar.
