Add styling for about me and footer sections

--- a/index.html
+++ b/index.html
@@ -10,30 +10,26 @@
   <body>
     <header id="header">
       <h1>Lynn Matar</h1>
-      <nav id="navigation">
-        <ul class="menu">
-          <li><a href="/">Home</a></li>
-          <li><a href="/resume/">Resume</a></li>
-          <li><a href="/history">History</a></li>
-        </ul>
-      </nav>
+      <a href="#footer" class="to-nav">Menu</a>
     </header>
     <main id="content">
-      <article class="aboutme">
-        <h2>About</h2>
+      <article id="aboutme">
+        <h1>About</h1>
         <p>
-          Hey there! My name is Lynn! I'm from Lebanon and I'm a third year computer science major at Illinois Institute of
-          Technology in Chicago.
+          I am from Lebanon and I'm a third year computer science major at Illinois Institute of
+          Technology in Chicago. Currently, I am interested in back-end and front-end programming.
+          I have an upcoming internship at Accenture where I will get hands-on experience with
+          tech consulting!
         </p>
         <p>
           Although school takes up a lot of my time, I have many interests and hobbies such as
-          longboarding, weight training, playing the guitar, coffee, making puns, trying new foods,
-          and bullet journaling!
+          longboarding, weight training, playing the guitar, coffee, exploring new places, trying new foods,
+          and meeting new people!
         </p>
       </article>
 
       <article id="schedule" class="grid">
-        <h2>Class Schedule Fall 2021</h2>
+        <h1>Class Schedule Fall 2021</h1>
 
         <ul>
           <li>
@@ -93,25 +89,33 @@
           </li>
         </ul>
       </article>
-
-      <article class="contact">
-        <h2>Contact</h2>
-        <!--Maybe add a pic of myself?-->
-        <h4>
-          <a class="email" href="mailto:lmatar@hawk.iit.edu">lmatar@hawk.iit.edu</a>
-        </h4>
-        <h4>
-          <a class="linkedin" href="linkedin.com/in/lynnmatar">LinkedIn Profile</a>
-        </h4>
-        <h4>
-          <a class="github" href="github.com/lynnmatar">Github Page</a>
-        </h4>
-      </article>
     </main>
 
     <footer id="footer">
-      Site was created &copy; by Lynn Matar.
-      <a href="https://github.com/lmatar/Website-LynnMatar">Source code available on GitHub</a>.
+      <section class="ft-main">
+        <div class="ft-item">
+          <h2 class="ft-title">Menu</h2>
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/resume/">Resume</a></li>
+            <li><a href="/history/">History Project</a></li>
+          </ul>
+        </div>
+        <div class="ft-item">
+          <h2 class="ft-title">Contact</h2>
+          <ul>
+            <li><a class="email" href="mailto:lmatar@hawk.iit.edu">Email</a></li>
+            <li><a class="linkedin" href="linkedin.com/in/lynnmatar">LinkedIn</a></li>
+            <li><a class="github" href="github.com/lynnmatar">Github</a></li>
+          </ul>
+        </div>
+      </section>
+      <section class="credits">
+        <ul class="credits-list">
+          <li>Site was created &copy; by Lynn Matar.</li>
+          <li><a href="https://github.com/lmatar/Website-LynnMatar">Source code available on GitHub</a></li>
+        </ul>
+      </section>
     </footer>
   </body>
 
