--- a/resume/index.html
+++ b/resume/index.html
@@ -7,16 +7,9 @@
   </head>
 
   <body>
-    <header id="header" >
-      <h1 class="pname">Lynn Matar</h1>
-      <nav id="navigation">
-        <h2>Menu</h2>
-        <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/resume/">Resume</a></li>
-          <li><a href="/history">History</a></li>
-        </ul>
-      </nav>
+    <header id="header">
+      <h1>Lynn Matar</h1>
+      <a href="#footer" class="to-nav">Menu</a>
     </header>
     <main id="content">
       
@@ -258,8 +251,30 @@
     </main>
 
     <footer id="footer">
-      Site was created &copy; by Lynn Matar.
-      <a href="https://github.com/lmatar/Website-LynnMatar">Source code available on GitHub</a>.
+      <section class="ft-main">
+        <div class="ft-item">
+          <h2 class="ft-title">Menu</h2>
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/resume/">Resume</a></li>
+            <li><a href="/history/">History Project</a></li>
+          </ul>
+        </div>
+        <div class="ft-item">
+          <h2 class="ft-title">Contact</h2>
+          <ul>
+            <li><a class="email" href="mailto:lmatar@hawk.iit.edu">Email</a></li>
+            <li><a class="linkedin" href="linkedin.com/in/lynnmatar">LinkedIn</a></li>
+            <li><a class="github" href="github.com/lynnmatar">Github</a></li>
+          </ul>
+        </div>
+      </section>
+      <section class="credits">
+        <ul class="credits-list">
+          <li>Site was created &copy; by Lynn Matar.</li>
+          <li><a href="https://github.com/lmatar/Website-LynnMatar">Source code available on GitHub</a></li>
+        </ul>
+      </section>
     </footer>
 
   </body>
