More changes to relative path due to errors

--- a/resume/index.html
+++ b/resume/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Resume: Lynn Matar</title>
     <meta charset="UTF-8"/>
-    <link rel="stylesheet" href="../assets/css/screen.css" />
+    <link rel="stylesheet" href="/assets/css/screen.css" />
   </head>
 
   <body>
@@ -255,9 +255,9 @@
         <div class="ft-item">
           <h2 class="ft-title">Menu</h2>
           <ul>
-            <li><a href="../">Home</a></li>
-            <li><a href="/">Resume</a></li>
-            <li><a href="../history/">History Project</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/resume/">Resume</a></li>
+            <li><a href="/history/">History Project</a></li>
           </ul>
         </div>
         <div class="ft-item">
