Edit menu and stylesheet links for history and resume page

--- a/history/index.html
+++ b/history/index.html
@@ -188,9 +188,9 @@
         <div class="ft-item">
           <h2 class="ft-title">Menu</h2>
           <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/resume/">Resume</a></li>
-            <li><a href="/history/">History Project</a></li>
+            <li><a href="../">Home</a></li>
+            <li><a href="../resume/">Resume</a></li>
+            <li><a href="../history/">History Project</a></li>
           </ul>
         </div>
         <div class="ft-item">
